--- a/tests/Euclid.Framework.UnitTests/Euclid.Framework.UnitTests.csproj
+++ b/tests/Euclid.Framework.UnitTests/Euclid.Framework.UnitTests.csproj
@@ -99,6 +99,8 @@
   <ItemGroup>
     <Compile Include="Cqrs\CommandDispatcherTests.cs" />
     <Compile Include="Cqrs\CommandHostTests.cs" />
+    <Compile Include="HostingFabric\BasicFabricTests.cs" />
+    <Compile Include="HostingFabric\FailingHostedService.cs" />
     <Compile Include="Metadata\AgentMetadataTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -129,6 +131,10 @@
     <ProjectReference Include="..\..\src\Euclid.Framework.Cqrs\Euclid.Framework.Cqrs.csproj">
       <Project>{58D2349E-9C39-485E-861E-E337ACF186B6}</Project>
       <Name>Euclid.Framework.Cqrs</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\src\Euclid.Framework.HostingFabric\Euclid.Framework.HostingFabric.csproj">
+      <Project>{6B55CE77-2663-45F0-ADB2-DFC7AB01233C}</Project>
+      <Name>Euclid.Framework.HostingFabric</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\src\Euclid.Framework.Metadata\Euclid.Framework.Metadata.csproj">
       <Project>{272059FF-3EF6-49A1-9DA5-D8649A17AA0C}</Project>
