--- a/src/Euclid.Framework.HostingFabric/Euclid.Framework.HostingFabric.csproj
+++ b/src/Euclid.Framework.HostingFabric/Euclid.Framework.HostingFabric.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{6B55CE77-2663-45F0-ADB2-DFC7AB01233C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Euclid.Common.HostingFabric</RootNamespace>
-    <AssemblyName>Euclid.Common.HostingFabric</AssemblyName>
+    <RootNamespace>Euclid.Framework.HostingFabric</RootNamespace>
+    <AssemblyName>Euclid.Framework.HostingFabric</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
