--- a/src/Euclid.Common/Euclid.Common.csproj
+++ b/src/Euclid.Common/Euclid.Common.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Configuration\IOverridableSetting.cs" />
     <Compile Include="Configuration\IOverridableSettingList.cs" />
     <Compile Include="Configuration\IOverridableSettings.cs" />
+    <Compile Include="Messaging\DispatcherNotConfiguredException.cs" />
     <Compile Include="Extensions\MimeTypes.cs" />
     <Compile Include="Extensions\StreamExtensions.cs" />
     <Compile Include="Extensions\ByteArrayExtensions.cs" />
@@ -91,8 +92,13 @@
     <Compile Include="HostingFabric\NoHostedServicesConfiguredException.cs" />
     <Compile Include="HostingFabric\NoServiceHostConfiguredException.cs" />
     <Compile Include="HostingFabric\ServiceHostNotResolvableException.cs" />
+    <Compile Include="Configuration\InvalidTypeSettingException.cs" />
     <Compile Include="Logging\ILoggingSource.cs" />
     <Compile Include="Messaging\IPublisher.cs" />
+    <Compile Include="Messaging\NoDispatchingSliceDurationConfiguredException.cs" />
+    <Compile Include="Messaging\NoInputChannelConfiguredException.cs" />
+    <Compile Include="Messaging\NoMessageProcessorsConfiguredException.cs" />
+    <Compile Include="Messaging\NoNumberOfMessagesPerSliceConfiguredException.cs" />
     <Compile Include="Pipeline\IPipelineStep.cs" />
     <Compile Include="Pipeline\Pipeline.cs" />
     <Compile Include="Pipeline\PipelinePriority.cs" />
