--- a/src/Euclid.Framework/Euclid.Framework.csproj
+++ b/src/Euclid.Framework/Euclid.Framework.csproj
@@ -72,17 +72,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cqrs\CommandDispatcherConfigurationException.cs" />
     <Compile Include="Cqrs\ICommand.cs" />
     <Compile Include="Cqrs\ICommandDispatcher.cs" />
     <Compile Include="Cqrs\ICommandProcessor.cs" />
     <Compile Include="Cqrs\ICommandPublicationRecord.cs" />
     <Compile Include="Cqrs\ICommandRegistry.cs" />
+    <Compile Include="Cqrs\InvalidMessageTypeException.cs" />
     <Compile Include="Cqrs\IQuery.cs" />
     <Compile Include="EventSourcing\IAggregateDenormalizer.cs" />
     <Compile Include="IAggregateRoot.cs" />
     <Compile Include="EventSourcing\ICommandToEventMapper.cs" />
     <Compile Include="EventSourcing\IEvent.cs" />
     <Compile Include="EventSourcing\IEventSourcedAggregate.cs" />
+    <Compile Include="Metadata\UnexpectedTypeException.cs" />
     <Compile Include="Models\IReadModel.cs" />
     <Compile Include="Metadata\IAgentMetadata.cs" />
     <Compile Include="Metadata\IAgentPart.cs" />
