--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -22,4 +22,5 @@
   <repository path="..\tests\Euclid.Composite.MvcApplication\packages.config" />
   <repository path="..\src\HostingFabricConsole\packages.config" />
   <repository path="..\src\Euclid.Composites\packages.config" />
+  <repository path="..\src\AgentConsole\packages.config" />
 </repositories>
