--- a/src/AgentConsole/packages.config
+++ b/src/AgentConsole/packages.config
@@ -4,4 +4,5 @@
   <package id="Castle.Windsor" version="2.5.3" />
   <package id="CommonServiceLocator" version="1.0" />
   <package id="CommonServiceLocator.WindsorAdapter" version="1.0" />
+  <package id="log4net" version="1.2.10" />
 </packages>
