added some custom exceptions to the hosting fabric; relocated some overlooked files from common to framework

--- a/src/Euclid.Framework.HostingFabric/Euclid.Framework.HostingFabric.csproj
+++ b/src/Euclid.Framework.HostingFabric/Euclid.Framework.HostingFabric.csproj
@@ -81,6 +81,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BasicFabric.cs" />
+    <Compile Include="CompositeAlreadyInstalledException.cs" />
+    <Compile Include="CompositeNotConfiguredException.cs" />
     <Compile Include="FabricRuntimeSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DefaultRuntimeStatistics.cs" />
