--- a/src/Euclid.Agent/Euclid.Agent.csproj
+++ b/src/Euclid.Agent/Euclid.Agent.csproj
@@ -74,6 +74,11 @@
   <ItemGroup>
     <Compile Include="AgentMetadata.cs" />
     <Compile Include="AssemblyNotAgentException.cs" />
+    <Compile Include="Attributes\AgentNameAttribute.cs" />
+    <Compile Include="Attributes\AgentSystemNameAttribute.cs" />
+    <Compile Include="Attributes\LocationOfCommandsAttribute.cs" />
+    <Compile Include="Attributes\LocationOfProcessorsAttribute.cs" />
+    <Compile Include="Attributes\LocationOfQueriesAttribute.cs" />
     <Compile Include="Commands\CommandMetadataCollection.cs" />
     <Compile Include="DuplicatePartNameException.cs" />
     <Compile Include="Commands\InvalidAgentPartImplementationException.cs" />
@@ -89,9 +94,9 @@
       <Project>{F3A0C178-15D9-4E18-B673-28B80F40E665}</Project>
       <Name>Euclid.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Euclid.Framework.Metadata\Euclid.Framework.Metadata.csproj">
+    <ProjectReference Include="..\Euclid.Framework.Agent\Euclid.Framework.Agent.csproj">
       <Project>{272059FF-3EF6-49A1-9DA5-D8649A17AA0C}</Project>
-      <Name>Euclid.Framework.Metadata</Name>
+      <Name>Euclid.Framework.Agent</Name>
     </ProjectReference>
     <ProjectReference Include="..\Euclid.Framework\Euclid.Framework.csproj">
       <Project>{8BA2EA0C-2220-4390-A87C-79E96E40DFD0}</Project>
