--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -21,4 +21,6 @@
   <repository path="..\src\framework\Euclid.Framework.HostingFabric\packages.config" />
   <repository path="..\src\sdk\Euclid.Composites\packages.config" />
   <repository path="..\src\sdk\Euclid.Composites.Mvc\packages.config" />
+  <repository path="..\src\framework\Euclid.Framework.Cqrs.NHibernate\packages.config" />
+  <repository path="..\src\sdk\AgentConsole\packages.config" />
 </repositories>
