--- a/tests/Euclid.Composite.MvcApplication/Euclid.Composite.MvcApplication.csproj
+++ b/tests/Euclid.Composite.MvcApplication/Euclid.Composite.MvcApplication.csproj
@@ -231,7 +231,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
+          <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>60617</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
