--- a/tests/Euclid.Composite.MvcApplication/Web.config
+++ b/tests/Euclid.Composite.MvcApplication/Web.config
@@ -66,5 +66,5 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <glimpse enabled="true" />
+  <glimpse enabled="false" />
 </configuration>
