resolve queries in agents

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -23,4 +23,5 @@
   <repository path="..\src\sdk\Euclid.Composites.Mvc\packages.config" />
   <repository path="..\src\framework\Euclid.Framework.Cqrs.NHibernate\packages.config" />
   <repository path="..\src\sdk\AgentConsole\packages.config" />
+  <repository path="..\tests\Euclid.Sdk.FakeAgent\packages.config" />
 </repositories>
