--- a/src/framework/Euclid.Framework.Cqrs.NHibernate/Euclid.Framework.Cqrs.NHibernate.csproj
+++ b/src/framework/Euclid.Framework.Cqrs.NHibernate/Euclid.Framework.Cqrs.NHibernate.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AutoMapperConfiguration.cs" />
     <Compile Include="NhQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
