--- a/src/sdk/Euclid.Composites/packages.config
+++ b/src/sdk/Euclid.Composites/packages.config
@@ -3,4 +3,8 @@
   <package id="Castle.Core" version="2.5.2" />
   <package id="Castle.Windsor" version="2.5.3" />
   <package id="AutoMapper" version="1.1.0.118" />
+  <package id="Iesi.Collections" version="3.1.0.4000" />
+  <package id="NHibernate" version="3.1.0.4000" />
+  <package id="NHibernate.Castle" version="3.1.0.4000" />
+  <package id="FluentNHibernate" version="1.2.0.712" />
 </packages>
