--- a/src/framework/Euclid.Framework.HostingFabric/Euclid.Framework.HostingFabric.csproj
+++ b/src/framework/Euclid.Framework.HostingFabric/Euclid.Framework.HostingFabric.csproj
@@ -88,6 +88,10 @@
     <Compile Include="DefaultRuntimeStatistics.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\common\Euclid.Common.Storage.NHibernate\Euclid.Common.Storage.NHibernate.csproj">
+      <Project>{A5B72DFB-6698-420C-ADCC-3F2D28C4F65E}</Project>
+      <Name>Euclid.Common.Storage.NHibernate</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\sdk\Euclid.Agent\Euclid.Agent.csproj">
       <Project>{4C4F2541-140C-47D6-B018-D2024F8CF4F0}</Project>
       <Name>Euclid.Agent</Name>
@@ -115,6 +119,10 @@
     <ProjectReference Include="..\Euclid.Framework.Agent\Euclid.Framework.Agent.csproj">
       <Project>{272059FF-3EF6-49A1-9DA5-D8649A17AA0C}</Project>
       <Name>Euclid.Framework.Agent</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Euclid.Framework.Cqrs.NHibernate\Euclid.Framework.Cqrs.NHibernate.csproj">
+      <Project>{5A255BCD-5858-4CB3-BE76-177E65048D4F}</Project>
+      <Name>Euclid.Framework.Cqrs.NHibernate</Name>
     </ProjectReference>
     <ProjectReference Include="..\Euclid.Framework.Cqrs\Euclid.Framework.Cqrs.csproj">
       <Project>{58D2349E-9C39-485E-861E-E337ACF186B6}</Project>
