--- a/src/sdk/AgentConsole/packages.config
+++ b/src/sdk/AgentConsole/packages.config
@@ -5,4 +5,9 @@
   <package id="Castle.Windsor" version="2.5.3" />
   <package id="CommonServiceLocator" version="1.0" />
   <package id="CommonServiceLocator.WindsorAdapter" version="1.0" />
+  <package id="System.Data.SQLite" version="1.0.66.1" />
+  <package id="Iesi.Collections" version="3.1.0.4000" />
+  <package id="NHibernate" version="3.1.0.4000" />
+  <package id="NHibernate.Castle" version="3.1.0.4000" />
+  <package id="FluentNHibernate" version="1.2.0.712" />
 </packages>
