first end to end test for the forum agent

--- a/apps/ForumTests/app.config
+++ b/apps/ForumTests/app.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+	<configSections>
+		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net"/>
+	</configSections>
   <connectionStrings>
     <add name="Sqlite_InMemory" providerName="System.Data.SQLite" connectionString="Data Source=:memory:;Version=3;New=True" />
   </connectionStrings>
@@ -12,4 +15,22 @@
   <startup useLegacyV2RuntimeActivationPolicy="true">
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
   </startup>
+
+	<log4net>
+		<root>
+			<priority value="Info"/>
+			<appender-ref ref="Console"/>
+		</root>
+
+		<logger name="NHibernate">
+			<level value="WARN" />
+		</logger>
+
+		<appender name="Console" type="log4net.Appender.ConsoleAppender">
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
+			</layout>
+		</appender>
+
+	</log4net>
 </configuration>
