--- a/apps/ForumTests/app.config
+++ b/apps/ForumTests/app.config
@@ -3,9 +3,10 @@
 	<configSections>
 		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net"/>
 	</configSections>
-  <connectionStrings>
-    <add name="Sqlite_InMemory" providerName="System.Data.SQLite" connectionString="Data Source=:memory:;Version=3;New=True" />
-  </connectionStrings>
+	<connectionStrings>
+		<add name="test-db" connectionString="Data Source=.;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;" />
+		<add name="Sqlite_InMemory" providerName="System.Data.SQLite" connectionString="Data Source=:memory:;Version=3;New=True" />
+	</connectionStrings>
   <system.data>
     <DbProviderFactories>
       <remove invariant="System.Data.SQLite" />
@@ -16,9 +17,13 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
   </startup>
 
+	<appSettings>
+		<add key="DataConnectionString" value="UseDevelopmentStorage=true" />
+	</appSettings>
+
 	<log4net>
 		<root>
-			<priority value="Info"/>
+			<priority value="DEBUG"/>
 			<appender-ref ref="Console"/>
 		</root>
 
