--- a/tests/Euclid.Sdk.IntegrationTests/app.config
+++ b/tests/Euclid.Sdk.IntegrationTests/app.config
@@ -4,6 +4,7 @@
 		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net"/>
 	</configSections>
 	<connectionStrings>
+		<add name="test-db" connectionString="Data Source=.;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;" />
 		<add name="Sqlite_InMemory" providerName="System.Data.SQLite" connectionString="Data Source=:memory:;Version=3;New=True" />
 	</connectionStrings>
 	<system.data>
@@ -15,6 +16,10 @@
 	<startup useLegacyV2RuntimeActivationPolicy="true">
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
 	</startup>
+
+	<appSettings>
+		<add key="DataConnectionString" value="UseDevelopmentStorage=true" />
+	</appSettings>
 
 	<log4net>
 		<root>
