--- a/apps/ForumAgent/ForumAgent.csproj
+++ b/apps/ForumAgent/ForumAgent.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Processors\VoteOnPostProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\CategoryQueries.cs" />
+    <Compile Include="Queries\CommentQueries.cs" />
     <Compile Include="Queries\PostQueries.cs" />
     <Compile Include="Queries\UserQueries.cs" />
     <Compile Include="ReadModels\Category.cs" />
