added a better log4net conversion pattern for console output; added a file appender to the agent console. it runs in in append mode and includes full values that are truncated for console output

--- a/src/sdk/AgentConsole/app.config
+++ b/src/sdk/AgentConsole/app.config
@@ -29,6 +29,7 @@
 		<root>
 			<priority value="INFO"/>
 			<appender-ref ref="Console"/>
+			<appender-ref ref="File"/>
 		</root>
 
 		<logger name="NHibernate">
@@ -47,7 +48,15 @@
 			</mapping>
 
 			<layout type="log4net.Layout.PatternLayout">
-				<conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
+				<conversionPattern value="%d{HH:mm:ss} [%4p] %.15c - %m%n" />
+			</layout>
+		</appender>
+
+		<appender name="File" type="log4net.Appender.FileAppender">
+			<file value="log.txt" />
+			<appendToFile value="true" />
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%d [%p] %c - %m%n" />
 			</layout>
 		</appender>
 
