--- a/tests/Euclid.Sdk.IntegrationTests/app.config
+++ b/tests/Euclid.Sdk.IntegrationTests/app.config
@@ -33,7 +33,7 @@
 
 		<appender name="Console" type="log4net.Appender.ConsoleAppender">
 			<layout type="log4net.Layout.PatternLayout">
-				<conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
+				<conversionPattern value="%d{HH:mm:ss} [%4p] %.15c - %m%n" />
 			</layout>
 		</appender>
 
