--- a/src/sdk/Euclid.Composites.Mvc/Euclid.Composites.Mvc.csproj
+++ b/src/sdk/Euclid.Composites.Mvc/Euclid.Composites.Mvc.csproj
@@ -95,11 +95,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ActionFilters\FormatActionFilter.cs" />
+    <Compile Include="ActionFilters\CannotRetrieveInputModelException.cs" />
+    <Compile Include="ActionFilters\CannotRetrieveMetadataException.cs" />
+    <Compile Include="ActionFilters\FormatAgentMetadataAttribute.cs" />
+    <Compile Include="ActionFilters\ResultsFormatter.cs" />
+    <Compile Include="ActionFilters\FormatInputModelAttribute.cs" />
+    <Compile Include="ActionFilters\FormatNotSpecifiedException.cs" />
     <Compile Include="Binders\AgentMetadataModelBinder.cs" />
+    <Compile Include="Binders\AgentPartMetadataCollectionBinder.cs" />
+    <Compile Include="Binders\AgentPartTypeNotSpecifiedException.cs" />
     <Compile Include="Binders\CannotSetInputModelPropertyValues.cs" />
     <Compile Include="Binders\IEuclidModelBinder.cs" />
     <Compile Include="Binders\InputModelBinder.cs" />
+    <Compile Include="Binders\InvalidPartCollectionException.cs" />
+    <Compile Include="Binders\TypeMetadataModelBinder.cs" />
     <Compile Include="ComponentRegistration\ComponentRegistrationBase.cs" />
     <Compile Include="ComponentRegistration\ControllerContainerInstaller.cs" />
     <Compile Include="ComponentRegistration\ModelBinderInstaller.cs" />
