--- a/src/framework/Euclid.Framework.Cqrs.NHibernate/Euclid.Framework.Cqrs.NHibernate.csproj
+++ b/src/framework/Euclid.Framework.Cqrs.NHibernate/Euclid.Framework.Cqrs.NHibernate.csproj
@@ -64,6 +64,10 @@
       <Project>{F3A0C178-15D9-4E18-B673-28B80F40E665}</Project>
       <Name>Euclid.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Euclid.Framework.Agent\Euclid.Framework.Agent.csproj">
+      <Project>{272059FF-3EF6-49A1-9DA5-D8649A17AA0C}</Project>
+      <Name>Euclid.Framework.Agent</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Euclid.Framework\Euclid.Framework.csproj">
       <Project>{8BA2EA0C-2220-4390-A87C-79E96E40DFD0}</Project>
       <Name>Euclid.Framework</Name>
