--- a/tests/Euclid.Sdk.IntegrationTests/packages.config
+++ b/tests/Euclid.Sdk.IntegrationTests/packages.config
@@ -10,4 +10,7 @@
   <package id="CommonServiceLocator.WindsorAdapter" version="1.0" />
   <package id="log4net" version="1.2.10" />
   <package id="System.Data.SQLite" version="1.0.66.1" />
+  <package id="SpecFlow" version="1.7.0" />
+  <package id="WatiN" version="2.1.0" />
+  <package id="HttpClient" version="0.3.0" />
 </packages>
