--- a/src/framework/Euclid.Framework.Agent/Euclid.Framework.Agent.csproj
+++ b/src/framework/Euclid.Framework.Agent/Euclid.Framework.Agent.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\..\packages\Newtonsoft.Json.4.0.2\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,12 +45,13 @@
   <ItemGroup>
     <Compile Include="Attributes\NamespaceFinderAttribute.cs" />
     <Compile Include="Attributes\TextAttribute.cs" />
-    <Compile Include="Metadata\ArgumentMetadata.cs" />
-    <Compile Include="Metadata\InterfaceMetadata.cs" />
-    <Compile Include="Metadata\MethodMetadata.cs" />
-    <Compile Include="Metadata\TypeMetadata.cs" />
+    <Compile Include="Metadata\ArgumentMetadataProvider.cs" />
+    <Compile Include="Metadata\EuclidMetadataProvider.cs" />
+    <Compile Include="Metadata\InterfaceMetadataProvider.cs" />
+    <Compile Include="Metadata\MethodMetadataProvider.cs" />
+    <Compile Include="Metadata\TypeMetadataProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Metadata\PropertyMetadata.cs" />
+    <Compile Include="Metadata\PropertyMetadataProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\common\Euclid.Common\Euclid.Common.csproj">
@@ -59,7 +63,9 @@
       <Name>Euclid.Framework</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
